objects/ASI_CRM_CN_Daily_Offtake__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Offtake__c</fullName>
        <label>Offtake</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Daily Offtakes</relationshipLabel>
        <relationshipName>Daily_Offtakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Daily Offtake</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DO{000000}</displayFormat>
        <label>Daily Offtake Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Offtakes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Daily_Offtake</fullName>
        <active>true</active>
        <label>CN Daily Offtake</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>